fix: newsletter missing margin

--- a/src-client/style/article.scss
+++ b/src-client/style/article.scss
@@ -170,6 +170,7 @@
         .inputs-wrapper {
             display: flex;
             flex-direction: column;
+            margin: 24px 0;
 
             .email {
                 font-family: inherit;
